make sure advanced features are hidden by default

--- a/files/www/lan/style.css
+++ b/files/www/lan/style.css
@@ -24,6 +24,10 @@ body {
 	cursor: help;
 }
 
+.adv_hide {
+	display: none
+}
+
 #nds_files label {
 	width: 18em;
 }
